--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 body {
-    background-color:navy;
+    background:linear-gradient(40deg,var(--sec_color),black);
 }
 *{
+    border-radius: 20px;
     overflow-x: hidden;
 }
-
+:root{
+    --pri_color:navy;
+    --sec_color: royalblue
+}
 @media (max-width: 800px) {
     body {
         font-size: 18px;
-        background-color: royalblue;
+        background-color: var(--sec_color);
     }
-    nav{
+    nav{ 
         flex-direction: column;
         font-size: 14px;
     }
@@ -80,3 +84,37 @@ body {
     opacity: 0.8; 
     
 } 
+
+
+.container-date{
+    display: flex;
+    align-items: center;
+    text-align: center;
+    border-radius: 20px;
+    color: white;
+    position: relative;
+    margin: auto; 
+    display: flex;
+    width: 500px;
+    height: 20vh;
+    align-items: center;
+    justify-content: space-evenly;
+    background: linear-gradient(40deg,var(--pri_color),white);
+}
+
+.left,.right{
+
+    border-radius: 50px;
+    width: 30%;
+    height: 50%;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.left,.right{
+    background:linear-gradient(var(--sec_color),black);
+}
+.right{
+    flex-direction: column;
+}
