--- a/styles.css
+++ b/styles.css
@@ -1,120 +1,121 @@
 body {
-    background:linear-gradient(40deg,var(--sec_color),black);
+  background: linear-gradient(40deg, var(--sec_color), black, var(--sec_color));
 }
-*{
-    border-radius: 10px;
-    overflow-x: hidden; 
+* {
+  border-radius: 10px;
+  overflow-x: hidden;
 }
-:root{
-    --pri_color:navy;
-    --sec_color: royalblue
+:root {
+  --pri_color: navy;
+  --sec_color: royalblue;
 }
 @media (max-width: 800px) {
-    body {
-        font-size: 18px;
-        background-color: var(--sec_color);
-    }
-    nav{ 
-        flex-direction: column;
-        font-size: 14px;
-    }
-    nav ul li{
-        margin: 5px 13px;
-    }
-    nav ul{
-        justify-content: center;
-    }
-    .container{
-        max-width: 95vw; 
-    }
-    .container form input[type='number'],select,label{
-        width: 85vw;
-    }
-    .clock{
-        display: none;
-    }
-}
-.clock{
-    background-color: #dadada;
-    margin: 10px 10px;
-    padding: 10px 10px;
-    width: 55%;   
-    margin-top: 20px;
-    margin-bottom: 20px;
-    margin-right: 40px;
-}
-
-
-
-#clockContainer{  
-    position: relative;
-    margin: auto;
-    height: 10vw;
-    width: 10vw; 
-    background: url(clock.png) no-repeat;
-    background-size: 100%;
-    color:aliceblue;
-}
-
-#hour, #minute, #second{
-    position: absolute;
-    background: black;
-    border-radius: 10px; 
-    transform-origin: bottom;
-}
-#hour{
-    width: 1.8%;
-    height: 25%;
-    top: 25%;
-    left: 48.85%;
-    opacity: 0.8;  
-}
-#minute{
-    width: 1.6%;
-    height: 30%;
-    top: 19%;
-    left: 48.9%;
-    opacity: 0.8;  
-}
-#second{
-    width: 1%;
-    height: 40%;
-    top: 9%;
-    left: 49.25%;
-    opacity: 0.8; 
-    
-} 
-
-
-.container-date{
-    display: flex;
-    align-items: center;
-    text-align: center;
-    border-radius: 20px;
-    color: white;
-    position: relative;
-    margin: auto; 
-    display: flex;
-    width: 500px;
-    height: 20vh;
-    align-items: center;
-    justify-content: space-evenly;
-    background: linear-gradient(40deg,var(--pri_color),white);
-}
-
-.left,.right{
-
-    border-radius: 50px;
-    width: 30%;
-    height: 50%;
-    padding: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.left,.right{
-    background:linear-gradient(var(--sec_color),black);
-}
-.right{
+  body {
+    font-size: 18px;
+    background-color: var(--sec_color);
+  }
+  nav {
     flex-direction: column;
+    font-size: 14px;
+  }
+  nav ul li {
+    margin: 5px 13px;
+  }
+  nav ul {
+    justify-content: center;
+  }
+  .container {
+    max-width: 95vw;
+  }
+  .container form input[type="number"],
+  select,
+  label {
+    width: 85vw;
+  }
+  .clock {
+    display: none;
+  }
+}
+.clock {
+  background-color: #dadada;
+  margin: 10px 10px;
+  padding: 10px 10px;
+  width: 55%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 40px;
+}
+
+#clockContainer {
+  position: relative;
+  margin: auto;
+  height: 10vw;
+  width: 10vw;
+  background: url(clock.png) no-repeat;
+  background-size: 100%;
+  color: aliceblue;
+}
+
+#hour,
+#minute,
+#second {
+  position: absolute;
+  background: black;
+  border-radius: 10px;
+  transform-origin: bottom;
+}
+#hour {
+  width: 1.8%;
+  height: 25%;
+  top: 25%;
+  left: 48.85%;
+  opacity: 0.8;
+}
+#minute {
+  width: 1.6%;
+  height: 30%;
+  top: 19%;
+  left: 48.9%;
+  opacity: 0.8;
+}
+#second {
+  width: 1%;
+  height: 40%;
+  top: 9%;
+  left: 49.25%;
+  opacity: 0.8;
+}
+
+.container-date {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
+  color: white;
+  position: relative;
+  margin: auto;
+  display: flex;
+  width: 500px;
+  height: 20vh;
+  align-items: center;
+  justify-content: space-evenly;
+  background: linear-gradient(40deg, var(--pri_color), white, var(--pri_color));
+}
+
+.left,
+.right {
+  border-radius: 50px;
+  width: 30%;
+  height: 50%;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.left,
+.right {
+  background: linear-gradient(var(--sec_color), black, var(--pri_color));
+}
+.right {
+  flex-direction: column;
 }
